fixing margins on mobile screens

--- a/client/src/components/BookList.css
+++ b/client/src/components/BookList.css
@@ -66,6 +66,6 @@
 
 @media screen and (min-width: 280px) and (max-width: 419px) {
   .list {
-    margin-left: -20px;
+    margin-left: 5px;
   }
 }
