--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -18,6 +18,10 @@
 }
 
 @media screen and (min-width: 280px) and (max-width: 419px) {
+  .user-details {
+    margin-left: 10px;
+  }
+
   .render-books {
     margin-left: 10px;
   }
